k8s/backpressure.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  backpressure-test
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-terminus
  namespace: backpressure-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bb-terminus
  template:
    metadata:
      labels:
        app: bb-terminus
      annotations:
        config.linkerd.io/proxy-cpu-request: 100m
        config.linkerd.io/proxy-memory-request: 20Mi
        config.linkerd.io/proxy-memory-limit: 250Mi
    spec:
      containers:
      - name: bb-terminus
        image: buoyantio/bb:latest
        args: 
        - "terminus"
        - "--h1-server-port"
        - "9090"
        - "--response-text"
        - "BANANA"
        - "--sleep-in-millis"
        - "100"
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: bb-terminus
  namespace: backpressure-test
spec:
  selector:
    app: bb-terminus
  ports:
  - name: http
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slow-cooker
  namespace: backpressure-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slow-cooker
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
      labels:
        app: slow-cooker
    spec:
      containers:
      - name: slow-cooker
        image: buoyantio/slow_cooker:latest
        args:
        - "-concurrency=100"
        - "-interval=30s"
        - "-noLatencySummary"
        - "-qps=1"
        - "http://ingress-nginx-controller.ingress-nginx"
        ports:
        - name: metrics
          containerPort: 8505
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backpressure-ingress
  namespace: backpressure-test
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bb-terminus
            port:
              number: 9090
